RESOLVED FIXED193773
[css-logical] inset shorthand should not accept unitless length quirk
https://bugs.webkit.org/show_bug.cgi?id=193773
Summary [css-logical] inset shorthand should not accept unitless length quirk
Oriol Brufau
Reported 2019-01-24 10:23:50 PST
https://github.com/w3c/csswg-drafts/issues/3525 RESOLVED: Do not allow quirks in 'inset' shorthand Only the longhands and shorthands explicitly listed in https://quirks.spec.whatwg.org/#the-unitless-length-quirk should accept unitless lengths.
Attachments
Patch (14.15 KB, patch)
2019-01-24 10:34 PST, Oriol Brufau
no flags
Patch (149.19 KB, patch)
2019-01-28 05:21 PST, Oriol Brufau
no flags
Oriol Brufau
Comment 1 2019-01-24 10:34:43 PST
Manuel Rego Casasnovas
Comment 2 2019-01-28 01:48:11 PST
Comment on attachment 360021 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=360021&action=review LGTM, maybe we need one more test check the comments inline. > Source/WebCore/ChangeLog:10 > + should reject it. Could you link the CSSWG discussion or the spec here? Thanks. > LayoutTests/imported/w3c/ChangeLog:9 > + allowed in the 'inset' shorthand. Is there any test checking that unitless lenghts are still allowed on quirks mode?
Oriol Brufau
Comment 3 2019-01-28 05:21:13 PST
Oriol Brufau
Comment 4 2019-01-28 05:25:48 PST
(In reply to Manuel Rego Casasnovas from comment #2) > > LayoutTests/imported/w3c/ChangeLog:9 > > + allowed in the 'inset' shorthand. > > Is there any test checking that unitless lenghts are still allowed on quirks > mode? I have imported the other unitless-length tests, which check top,right,bottom,left properties (among others).
WebKit Commit Bot
Comment 5 2019-01-28 09:44:27 PST
Comment on attachment 360335 [details] Patch Clearing flags on attachment: 360335 Committed r240588: <https://trac.webkit.org/changeset/240588>
WebKit Commit Bot
Comment 6 2019-01-28 09:44:29 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7 2019-01-28 09:45:28 PST
Note You need to log in before you can comment on or make changes to this bug.