[css-logical] Reject unitless length quirk in 'inset' shorthand https://bugs.webkit.org/show_bug.cgi?id=193773

Patch by Oriol Brufau <obrufau@igalia.com> on 2019-01-28
Reviewed by Manuel Rego Casasnovas.

LayoutTests/imported/w3c:

Import WPT tests that check that the unitless length quirk is not
allowed in the 'inset' shorthand.

* resources/import-expectations.json:
* web-platform-tests/quirks/support/test-ref-iframe.js: Added.
(setupIframe):
* web-platform-tests/quirks/support/w3c-import.log: Added.
* web-platform-tests/quirks/unitless-length/excluded-properties-001-expected.txt: Added.
* web-platform-tests/quirks/unitless-length/excluded-properties-001.html: Added.
* web-platform-tests/quirks/unitless-length/excluded-properties-002-expected.txt: Added.
* web-platform-tests/quirks/unitless-length/excluded-properties-002.html: Added.
* web-platform-tests/quirks/unitless-length/excluded-properties-003-expected.txt: Added.
* web-platform-tests/quirks/unitless-length/excluded-properties-003.html: Added.
* web-platform-tests/quirks/unitless-length/limited-quirks-expected.txt: Added.
* web-platform-tests/quirks/unitless-length/limited-quirks.html: Added.
* web-platform-tests/quirks/unitless-length/no-quirks-expected.txt: Added.
* web-platform-tests/quirks/unitless-length/no-quirks.html: Added.
* web-platform-tests/quirks/unitless-length/quirks-expected.txt: Added.
* web-platform-tests/quirks/unitless-length/quirks.html: Added.
* web-platform-tests/quirks/unitless-length/support/common.js: Added.
(onload):
* web-platform-tests/quirks/unitless-length/support/w3c-import.log: Added.
* web-platform-tests/quirks/unitless-length/w3c-import.log: Added.

Source/WebCore:

Even though its longhands ('top', 'right', 'bottom', 'left') accept the
unitless length quirk, the 'inset' shorthand is a new CSS property and
should reject it. This was resolved by the CSS WG in
https://github.com/w3c/csswg-drafts/issues/3525#issuecomment-456902648

Tests: imported/w3c/web-platform-tests/quirks/unitless-length/excluded-properties-001.html
       imported/w3c/web-platform-tests/quirks/unitless-length/excluded-properties-002.html
       imported/w3c/web-platform-tests/quirks/unitless-length/excluded-properties-003.html
       imported/w3c/web-platform-tests/quirks/unitless-length/limited-quirks.html
       imported/w3c/web-platform-tests/quirks/unitless-length/no-quirks.html
       imported/w3c/web-platform-tests/quirks/unitless-length/quirks.html

* css/parser/CSSPropertyParser.cpp:
(WebCore::CSSPropertyParser::parseSingleValue):

Canonical link: https://commits.webkit.org/208399@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@240588 268f45cc-cd09-0410-ab3c-d52691b4dbfc